--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
  <section class="attribution">
       <span>
         <h1>PrehistoricfishXR</h1>
-        <span>Click AR if you device not<br>support XR<img src="modelviewer.png" alt="sketchfab logo"><a href="https://oceanariummelaka.github.io/prehistoricfishplus/" target="_blank"><h1>AR</h1></a></span>Then point your device to QR Marker and move it slowly.
+        <span>Click AR if your device not<br>support XR<img src="modelviewer.png" alt="sketchfab logo"><a href="https://oceanariummelaka.github.io/prehistoricfishplus/" target="_blank"><h1>AR</h1></a></span>Then point your device to QR Marker and move it slowly.
 <p><h2>Dunkleosteus Fact</h2><br> Sometimes described as the Tyrannosaurus of the seas, Dunkleosteus was one of the largest armored fish.(fish with a bony protective covering).
 <br> It was as big as an elephant and a viscious hunter in the shallow seas in which it lived. It had the most powerful bite of any fish (except perhaps the megatooth shark).</p>
 <p>Click🔈if sound not load<a href="https://oceanariummelaka.github.io/prehistoricfish/" target="_blank"><h1>🔈</h1></a></p>
